# quicksave

./: .gitignore  main.py  pyproject.toml  setup.py  start_quicksave.sh
quicksave/core/: __init__.py  _criu.py  cli.py  compat.py  proctree.py  restore.py  snapshot.py
quicksave/daemon/: __init__.py  monitor.py  scheduler.py
quicksave/gui/: __init__.py  main.py  main_window.py  settings.py  snapshot_list.py  tray.py  tray_icon.py
quicksave/tests/: .test.txt.swp  add  add.c  loop  loop.c
quicksave/utils/: __init__.py  compress.py  logger.py  timer.py
